Add video support to the caption and meme commands

--- a/.env.example
+++ b/.env.example
@@ -48,7 +48,19 @@ METRICS=
 # The image API type to be used
 # Set this to `none` to process all images locally
 # Set this to `ws` if you want to use the external image API script, located in api/index.js
+# NOTE: VIDEOS WILL BE PROCESSED LOCALLY REGARDLESS
 API_TYPE=none
 
 # Put ID of server to limit owner-only commands to
 ADMIN_SERVER=
+
+# Maximum number of media processing operations that can be running concurrently at any given time.
+MEDIA_CONCURRENCY_LIMIT=1
+
+# Maximum size in pixels for each dimension of an output video
+MAX_VIDEO_DIMENSIONS=1024
+# Stop processing a video after the output reaches the following size
+# (The size of the output file is slightly bigger than this value.)
+MAX_VIDEO_SIZE=64Mi
+# Stop processing a video after the following time (in milliseconds) has elapsed
+VIDEO_SOFT_TIMEOUT=60000
