--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "node": ">=15"
   },
   "scripts": {
-    "build": "cmake-js compile",
-    "build:debug": "cmake-js compile -DCMAKE_BUILD_TYPE=Debug",
+    "build": "npm run build-natives && npm run build-ffmpeg",
+    "build-natives": "cmake-js compile",
+    "build-natives:debug": "cmake-js compile -DCMAKE_BUILD_TYPE=Debug",
+    "build-ffmpeg": "cd ffmpeg/ && echo 'Configuring the FFmpeg build. This might take a while...' && sh ./configure --fatal-warnings --enable-gpl --enable-version3 --enable-nonfree --enable-libesmbot --enable-libvips --enable-libvpx --enable-libopus --enable-openssl --disable-encoders --enable-encoder=libvpx_vp8 --enable-encoder=libopus --enable-encoder=wrapped_avframe --disable-outdevs --disable-indevs --enable-indev=lavfi --disable-muxers --enable-muxer=webm --enable-muxer=null --assert-level=1 --disable-doc && make -j $(grep -c ^processor /proc/cpuinfo)",
     "docker:build": "DOCKER_BUILDKIT=1 docker build -t esmbot .",
     "docker:run-bot": "docker run --rm --network=host esmbot",
     "docker:run-api": "docker run --rm --network=host esmbot-api",
