Add libavfilter command and improved control over FFmpeg's resource usage

--- a/.env.example
+++ b/.env.example
@@ -54,7 +54,11 @@ API_TYPE=none
 # Put ID of server to limit owner-only commands to
 ADMIN_SERVER=
 
-# Maximum number of media processing operations that can be running concurrently at any given time.
+# Maximum amount of physical memory each FFmpeg process is allowed to use, in bytes
+# (Each command spawns at most one FFmpeg process.)
+FFMPEG_MEMORY_LIMIT=1Gi
+
+# Maximum number of media processing operations that can be running concurrently at any given time
 MEDIA_CONCURRENCY_LIMIT=1
 
 # Maximum size in pixels for each dimension of an output video
@@ -64,3 +68,6 @@ MAX_VIDEO_DIMENSIONS=1024
 MAX_VIDEO_SIZE=64Mi
 # Stop processing a video after the following time (in milliseconds) has elapsed
 VIDEO_SOFT_TIMEOUT=60000
+# Forcefully stop processing a video after the following time (in milliseconds) has elapsed
+# (The output file might get corrupted if this time is reached.)
+VIDEO_HARD_TIMEOUT=70000
